<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/titleTV"
            android:text="@string/add"
            android:textSize="28sp"
            android:gravity="center"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="53dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/editname"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:hint="@string/write_here_name"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="3dp"/>
        <EditText
            android:id="@+id/editcontent"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:hint="@string/write_here_content"
            android:gravity="center"
            android:layout_marginBottom="3dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/isdaily"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="#000"/>
            <CheckBox
                android:id="@+id/isDaily"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="20sp"
            android:id="@+id/okBtn"
            android:background="@drawable/ok_or_cancle_btn"
            android:onClick="m1Ok"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/cancleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="m1Cancle"
            android:text="@string/cancel"
            android:background="@drawable/ok_or_cancle_btn"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>
</LinearLayout>