<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/titleTV"
            android:text="@string/announce"
            android:textSize="28sp"
            android:gravity="center"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="53dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtText"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/sure_complete"
            android:gravity="center"
            android:layout_marginBottom="3dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="20sp"
            android:id="@+id/okBtn"
            android:background="@drawable/ok_or_cancle_btn"
            android:onClick="mOk"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/cancleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mCancle"
            android:text="@string/cancel"
            android:background="@drawable/ok_or_cancle_btn"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>
</LinearLayout>