<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReInput_Fragment"
    android:padding="20dp">

    <ImageView
        android:layout_marginBottom="20dp"
        android:id="@+id/logo11"
        android:layout_width="181dp"
        android:layout_height="93dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/nameinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:textSize="20sp"
        android:id="@+id/nameinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/firstedittext"
        android:hint="@string/name"
        android:gravity="center"
        android:maxLength="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo11"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@+id/ageinput"
        app:layout_constraintVertical_chainStyle="packed">
    </EditText>

    <EditText
        android:textSize="20sp"
        android:id="@+id/ageinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/firstedittext"
        android:inputType="number"
        android:layout_marginTop="30dp"
        android:hint="@string/age"
        android:gravity="center"
        android:maxLength="3"
        app:layout_constraintTop_toBottomOf="@+id/nameinput"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@+id/heightinput"
        app:layout_constraintVertical_chainStyle="packed">
    </EditText>

    <EditText
        android:textSize="20sp"
        android:id="@+id/heightinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/firstedittext"
        android:layout_marginTop="30dp"
        android:hint="@string/high"
        android:gravity="center"
        android:maxLength="3"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/ageinput"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@+id/kginput"
        app:layout_constraintVertical_chainStyle="packed">
    </EditText>

    <EditText
        android:textSize="20sp"
        android:id="@+id/kginput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="number"
        android:background="@drawable/firstedittext"
        android:hint="@string/kg"
        android:gravity="center"
        android:maxLength="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightinput"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@+id/complete"
        app:layout_constraintVertical_chainStyle="packed">
    </EditText>

    <Button
        android:layout_marginTop="30dp"
        android:elevation="0dp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chosebtn"
        android:text="@string/com"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kginput">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>