<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="500dp"
            android:padding="60dp"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/enterinformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menubtn"
            android:fontFamily="@font/apple_sd_gothic_neo_r"
            android:gravity="left"
            android:padding="15dp"
            android:text="@string/enterinformation"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile" />

        <Button
            android:id="@+id/ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menubtn"
            android:fontFamily="@font/apple_sd_gothic_neo_r"
            android:gravity="left"
            android:padding="15dp"
            android:text="@string/ranking"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/enterinformation" />

        <Button
            android:id="@+id/shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menubtn"
            android:fontFamily="@font/apple_sd_gothic_neo_r"
            android:gravity="left"
            android:padding="15dp"
            android:text="@string/shop"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/ranking" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- TODO: Update blank fragment layout -->

</FrameLayout>